<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Goth Bingo</string>
    <string name="app_url" translatable="false">https://int80.de/bingo.apk</string>
    <string name="new_field_collector_url" translatable="false">https://int80.de/bingo/collector.php</string>
    <string name="fields_url" translatable="false">https://int80.de/bingo/js/fields.php?pure_json=1</string>
    <string name="websocket_url" translatable="false">wss://int80.de/bingo/server</string>
    <string name="github_url" translatable="false">https://github.com/jkehne/goth-bingo-android</string>

    <string name="share_chooser_title">Share Goth Bingo</string>

    <string name="win_message">You win!</string>
    <string name="lose_message">wins!</string>
    <string name="free_space_text">Free space</string>

    <string name="play_again_button_text">Tap here to play again</string>
    <string name="num_players_button_text">Players online</string>
    <string name="refresh_button_text">Reload fields</string>
    <string name="exit_button_text">Exit game</string>
    <string name="suggest_button_text">Suggest new field</string>
    <string name="suggest_dialog_text">Please enter your suggestion here</string>
    <string name="share_button_text">Share</string>
    <string name="github_button_text">Github</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Player name</string>
    <string name="prompt_password">Game ID</string>
    <string name="action_sign_in">Sign in</string>

    <string name="service_notification_text">Background service running</string>

    <string name="fields_downloading_message">Getting field contents, please wait</string>
    <string name="fields_download_failed_title">Download failed</string>
    <string name="fields_download_failed_message">Failed to download field contents. Is your internet connection working?</string>

    <string name="submitting_suggestion_message">Submitting your suggestion, please wait</string>
    <string name="submit_suggestion_failed_title">Submit failed</string>
    <string name="submit_suggestion_failed_message">Failed to submit your suggestion. Is your internet connection working?</string>
    <string name="submit_suggestion_success_title">Thank you</string>
    <string name="submit_suggestion_success_message">Your suggestion has been recorded. Note that it must be approved by an administrator before it will appear in the game.</string>

    <string name="update_available_title">Update available</string>
    <string name="update_available_message">An newer version of this app is available. Install now? (Warning: Installing an update aborts a running game)</string>
    <string name="update_download_failed_message">Update download failed</string>
    <string name="update_signature_mismatch">Update signature mismatch. Please try again later.</string>
    <string name="update_notification_title">GothBingo update</string>

    <string name="ok_action_text">OK</string>
    <string name="cancel_action_text">Cancel</string>
    <string name="yes_action_text">Yes</string>
    <string name="no_action_text">No</string>

    <string name="foreground_notification_channel_name">Win messages</string>
    <string name="background_notification_channel_name">Background service notification</string>
</resources>
