<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/SuggestButton"
        android:icon="@drawable/ic_add_circle_outline_white_24dp"
        android:title="@string/suggest_button_text"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/RefreshButton"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/refresh_button_text"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/ShareButton"
        android:icon="@drawable/ic_share"
        android:title="@string/share_button_text"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/GithubButton"
        android:icon="@drawable/ic_github_mark_light_120px_plus"
        android:title="@string/github_button_text"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/ExitButton"
        android:icon="@drawable/ic_exit_to_app_white_24dp"
        android:title="@string/exit_button_text"
        android:visible="true"
        app:showAsAction="ifRoom" />
</menu>